$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

October 4, 2010
---------------
#905860 by Michelle: Ensure advanced_forum_get_forum_types returns an array()
#876294 by RedKing: Updated French translation.
NOISSUE by Michelle: Made submit button IDs more specific on searching. Tangently related to #883452.
#883452 by rodrigoaguilera: Added a specific ID to the topic list sort form.
NOISSUE by Michelle: Changed 'search' buttons to 'search forum' and 'search topic'.
NOISSUE by Michelle: Added message about unpublished post to post template.
NOISSUE by Michelle: Fixed bug with new comment jump link on topic not working with nodecomment.

September 23, 2010
------------------
#376039 by Michelle with thanks to NowPublic for code reference: Added 'in reply to' for core comments.
#376039 by Michelle with thanks to NowPublic for code reference: Added 'in reply to' for node comments.
#913822 by Michelle, meustrus: Changed sorting so updates only bump on the New & My views.
NOISSUE by Michelle: Many tweaks to the included views.
NOISSUE by Michelle: Added setting to turn on local tabs for the stand alone included views.

September 22, 2010
------------------
#829456 by Michelle, meustrus: Added Permalink integration.
NOISSUE by Michelle: Cleaned up node and comment preprocessing including starting #1 at the node, fixing bad logic in the class collection, re-arranging in display order, and more.
#525194 by Michelle: Removed Author Pane dependency.
#751890 by Michelle: Missed removing advanced_forum.naked.topic-list.tpl.php when Views was made a dependency.
#725720 by ltwinner: Added variable for reply link to node preprocess.

September 21, 2010
------------------
#868550 by enzipher, szantog: Added missing brackets in query.
#872294 by merlinofchaos, jeckman: Fixed query part of link for forum views so they can take multiple forum arguments.
#857982 by aenw: Checked if $added is empty rather than !$added.