@@ -247,4 +247,3 @@ span.topic-icon {
 .en .post_delete span {
   background: transparent url(images/en/delete.png) no-repeat;
 }
-
